hyc-examples/tests/variables/valid/mutable-def.hyc
mutable_str!: str = "This is some sort of string";
