hyc-examples/tests/variables/invalid/missing-type-def.hyc
some_val: = "this is a string";
